# datalake

./: .gitattributes  .gitignore  .gitlab-ci.yml  .gitlab-ci.yml.j2  .travis.yml  Dockerfile  LICENSE  Makefile  README.md  TUTORIAL.md  Vagrantfile  docker_entry.sh  init.sh  requirements.txt  setup.cfg  setup.py  test-requirements.txt
api/: .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.md  setup.cfg  setup.py  staging.env
atl/: __init__.py  archive.py  conf.py  log.py
client/: .gitattributes  .gitignore  .travis.yml  MANIFEST.in  README.md  TUTORIAL.md  pyproject.toml  setup.py  tox.ini
client/datalake/: _version.py  archive.py  config_helpers.py  crtime.py  dlfile.py  logging_helpers.py  queue.py
client/datalake/common/: __init__.py  errors.py  metadata.py  record.py
client/datalake/scripts/: cli.py
client/datalake/tests/: conftest.py  test_conf.py  test_metadata.py  test_record.py
client/test/: conftest.py  test_archive.py  test_cli.py  test_config.py  test_crtime.py  test_fetch.py  test_file.py  test_list.py  test_logging.py  test_queue.py  test_translator.py
common/: .travis.yml  MANIFEST.in
datalake/: __init__.py  archive.py  conf.py  crtime.py  dlfile.py  metadata.py  queue.py  translator.py
datalake_api/: __init__.py  app.py  fetcher.py  querier.py  settings.py  v0.py
datalake_backend/: __init__.py  cli.py  conf.py  errors.py  ingester.py  log.py  queue.py  record.py  reporter.py  storage.py  translator.py
datalake_common/: __init__.py  archive.py  conf.py  errors.py  metadata.py  record.py
datalake_ingester/: __init__.py  cli.py  errors.py  ingester.py  queue.py  reporter.py  s3_notification.py  storage.py  translator.py
ingester/: .gitattributes  .gitignore  LICENSE  MANIFEST.in  setup.cfg  setup.py
scripts/: dynamodb.sh  init.sh  install_dynamodb.sh  install_java.sh
test/: __init__.py  conftest.py  test_archive.py  test_cli.py  test_crtime.py  test_fetch.py  test_file.py  test_latest.py  test_list.py  test_log.py  (+5 more)
(+82 files in other folders)
